# gan-with-grl-torchjd

./: .gitignore  README.md  main.py  pyproject.toml
pytorch/: train_gan.py
